# game-of-life

./: CMakeLists.txt  readme.md
examples/: example1.txt  example2.txt  example3.txt
src/: CMakeLists.txt  game_of_life.cpp
src/core/: CMakeLists.txt  board.h  engine.cpp  engine.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h
test/: CMakeLists.txt  game_of_life_test.cpp
